--- a/2012331054_Chapter_3.ipynb
+++ b/2012331054_Chapter_3.ipynb
@@ -536,7 +536,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "BA3K: Generate Contigs from a Collection of Reads"
    ]
@@ -545,7 +548,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
